frontend/test/should_pass/basic_010.grg
rule r {
	pattern {
	}
	modify {
		x : Node;
	}
}

