frontend/test/should_fail/inh_attrib_012.grg
using inh_attrib_model_012;

rule r {
	pattern {
	}
	replace {
	}
}

